# pprog

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  build.rs  install.sh
.github/workflows/: release.yaml
examples/: example_pprog.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  global.d.ts  index.css
frontend/src/styles/: base.css  chat-container.css  code-block.css  fab.css  input.css  modal.css
src/: chat.rs  config.rs  inference.rs  main.rs  server.rs  tooler.rs  tools.rs  tree.rs
src/chat/: anthropic_chat.rs  bedrock_chat.rs  chat.rs  deepseek_chat.rs  gemini_chat.rs  mod.rs  openai_chat.rs  tools.rs
src/inference/: anthropic.rs  bedrock.rs  deepseek.rs  gemini.rs  inference.rs  mod.rs  openai.rs  tools.rs  types.rs
