[package]
name = "prodomme"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
scopeguard = "1.2"
once_cell = "1.18"
anyhow = "1.0.95"
unicode-segmentation = "1.10.1"
textwrap = "0.16"
