[package]
name = "cmon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
scopeguard = "1.2"
once_cell = "1.18"
anyhow = "1.0.95"
unicode-segmentation = "1.10.1"
textwrap = "0.16"
gix = "0.55.2"
log = "0.4"
env_logger = "0.10"
config = "0.15.4"
toml = "0.8.19"
dirs = "5.0.1"
actix-web = "4.4"

[dev-dependencies]
tempfile = "3.8"