[package]
name = "pprog"
version = "0.0.3"
edition = "2021"
authors = ["George Balch <george.balch@proton.me>"]
description = "An LLM pair programming server with web interface"
license = "MIT"
repository = "https://github.com/foomprep/pprog"

include = [
    "src/**/*",
    "build.rs",
    "frontend/dist/**/*",  # Include only the built files
    "Cargo.toml",
]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
scopeguard = "1.2"
once_cell = "1.18"
anyhow = "1.0.95"
unicode-segmentation = "1.10.1"
textwrap = "0.16"
gix = "0.55.2"
log = "0.4"
env_logger = "0.10"
config = "0.15.4"
toml = "0.8.19"
dirs = "5.0.1"
include_dir = "0.7"
mime_guess = "2.0"
async-trait = "0.1"

# AWS Dependencies
aws-config = "1.1.1"
aws-sdk-bedrock = "1.9.0"
aws-sdk-bedrockruntime = "1.9.0"
aws-types = "1.1.1"

# Actix web dependencies
actix-web = "4.4"
actix-rt = "2.9"
actix-files = "0.6.2"
actix-cors = "0.7"
futures = "0.3"
home = "0.5.11"
handlebars = "6.2.0"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "pprog"
path = "src/main.rs"
